--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@uidotdev/usehooks": "^2.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.0",
+    "react-paginate": "^8.2.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.1",
+    "react-transition-group": "^4.4.5",
     "sweetalert2": "^11.10.2",
     "tailwind-merge": "^2.2.0",
     "tailwind-scrollbar-hide": "^1.1.7"
